--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:5173
 
 # Allowed Origins
-ALLOWED_ORIGINS=http://localhost:5173,https://resutrents-clients.vercel.app
+ALLOWED_ORIGINS=https://resutrents-clients.vercel.app
