coming to complete

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# Server Configuration
 PORT=8000 
 
 # JWT Secret Key
@@ -10,7 +9,4 @@ MONGO_URI="mongodb+srv://mohdshoaibkhan7211:mohdshoaibkhan7211@restuentslogin.g0
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=649980254584-mul64dr5a2keki6kjg10nurevv0riq8p.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:5173
-
-# Allowed Origins
-ALLOWED_ORIGINS=https://resutrents-clients.vercel.app
+GOOGLE_REDIRECT_URI=https://resutrents-clients.vercel.app
